Thu Apr 25 01:21:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/debug.rb (script_lines): get source lines from SCRIPT_LINES__ or
	  read from the file.

	* lib/debug.rb (display_list): use script_lines instead of recursion.
	  [Bug #8318]

	* lib/debug.rb (line_at): use script_lines same as display_list.

	* lib/debug.rb (display_list): Fix debug listing when called from the
	  same file it has been required.  patch by Dario Bertini <berdario AT
	  gmail.com> [Bug #8318] [fix GH-280]

Wed Apr 24 21:51:13 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check mblen().
	  mblen() is optional in uClibc.

	* eval_intern.h (CharNext): Don't use mblen() is not available.

Wed Apr 24 15:55:06 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_fd_fix_cloexec): use rb_update_max_fd().

Wed Apr 24 14:08:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* numeric.c: Fix wiki link on Float imprecision in overview, patched
	  by Makoto Kishimoto [Bug #8304] [ruby-dev:47280]

Wed Apr 24 14:03:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): disallow $- without following identifier
	  character.  [ruby-talk:406969]

	* parse.y (is_special_global_name): mere $- is not a valid global
	  variable name.

Wed Apr 24 13:54:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* string.c: Document String#setbyte return value by @gjmurakami-10gen
	  [Fixes GH-294]

Wed Apr 24 13:45:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* class.c: Example of Object#methods by @windwiny [Fixes GH-293]
	* ruby.c: Document return values of Kernel #sub, #gsub, and #chop

Wed Apr 24 12:54:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/socket/lib/socket.rb: Doc typos by @vipulnsward [Fixes GH-292]


Wed Apr 24 12:54:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/socket/lib/socket.rb: Doc typos by @vipulnsward [Fixes GH-292]

Wed Apr 24 12:27:00 2013  Zachary Scott  <zachary@zacharyscott.net>
